No overflow, scroll bar fix

--- a/src/components/Head/styles.styl
+++ b/src/components/Head/styles.styl
@@ -30,7 +30,7 @@
   cursor pointer
   position relative
   display flex
-  padding-left 10px
+
   .imgToken {
     max-height 24px
     width 24px
@@ -38,6 +38,7 @@
   }
 
   > span {
+    padding 10px 5px 10px 5px
     font-size 22px
     font-weight 450
     color rgb(33, 45, 94)
